ça commence à tenir la route

--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -17,9 +17,11 @@
     "\n",
     "## 4. Data story\n",
     "\n",
-    "## 5. Conclusions: \n",
-    "### 5.1 What did we find?\n",
-    "### 5.2 What's next/would be interesting to do\n",
+    "## 5. Caveats (ou inverser 5. et 6. idk)\n",
+    "\n",
+    "## 6. Conclusions: \n",
+    "### 6.1 What did we find?\n",
+    "### 6.2 What's next/would be interesting to do\n",
     "\n",
     "### somewhere:\n",
     "Indicate that we alternatively the terms speaker/citee/quotee, journal/media/newspaper, and group/consortium"
@@ -88,10 +90,9 @@
    "id": "2763e549",
    "metadata": {},
    "source": [
-    "### 4.1: data-extension[^1]\n",
-    "Well for starters, the data we extract from the Quotebank-dataset look like this:\n",
-    "\n",
-    "[^1]: see file Wikidata_scraping.ipynb for more details"
+    "### 4.1: data-augmentation[^1]\n",
+    "[^1]: see file Wikidata_scraping.ipynb for more details  \n",
+    "The data we extract from the Quotebank-dataset look like this:"
    ]
   },
   {
@@ -127,6 +128,14 @@
    "source": [
     "# Excerpt of wikidata code for scraping?\n",
     "# Exemple de à quoi ressemble les infos obtenues / la nouvelle data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "288ef0bd",
+   "metadata": {},
+   "source": [
+    "We also add the country of the media (**TODO: how do you define the country of a media? the country of their website when we find one, and o.w. the one indicated on wikidata? or we just say \"country of origin\"?**), because we expect to see differences in media based on their country of origin."
    ]
   },
   {
@@ -194,7 +203,7 @@
     "The reasoning is that we use the **IDF** to **find** words **unique** to each document, or **remove recurrent** words, which we find in basically every document, and therefore don't bring any information (e.g. stopwords such as 'the' in a text, or terms related to covid-19[^2]).  \n",
     "We use the **TF** to find words that **appear often**, as they may be **characteristic** of a particular document. For example the word 'brain' may often appear in a neuroscience paper, while not so much in a geography one.\n",
     "\n",
-    "[^2]: so this solves, or at least mitigates the issue mentione in "
+    "[^2]: so this solves, or at least mitigates the issue mentione in **3.2**"
    ]
   },
   {
@@ -250,7 +259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Illustration des projections qu'on a au départ, avec la séparation géographique."
+    "# Illustration des projections qu'on a au départ,\n",
+    "# avec la séparation géographique."
    ]
   },
   {
@@ -367,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9bd4b6b",
+   "id": "fdb61e98",
    "metadata": {},
    "source": [
     "#### TODO: why is it called \"US health\" and not just \"health\" in the notebook \"Analysis\"?\n",
@@ -392,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81115b0b",
+   "id": "7da766fa",
    "metadata": {},
    "source": [
     "We now focus only on the USA again:"
@@ -412,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57c99f2",
+   "id": "2083adde",
    "metadata": {},
    "source": [
     "As always, we try and identify the topics corresponding to the first axes:\n",
@@ -430,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eddf4ab",
+   "id": "cd14f9ba",
    "metadata": {},
    "source": [
     "Visually, the bright green points really stand out.  \n",
@@ -447,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35abb293",
+   "id": "39bf0f77",
    "metadata": {},
    "source": [
     "Let us remove this consortium from the analysis once again, and see what results we get:"
@@ -455,19 +465,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "bb837df9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# illustration of analysis on words, USA, without Townsquare\n",
     "\n",
-    "# zoom on 2-4 (yellow), and maybe 0-2(pale green)"
+    "# zoom on 2-4 or 0-4 or 1-4 (yellow) (2-4 seems best), and maybe 0-2(pale green)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a33fc2cc",
+   "id": "3aeed1e6",
    "metadata": {},
    "source": [
     "The axes we identify are as follow:\n",
@@ -477,43 +487,67 @@
     "| 0    | Frequent words        | Non frequent words |\n",
     "| 1    | Sport                 | Public health      |\n",
     "| 2    | Music                 | Sport              |\n",
-    "| 3    | Local / State related | Country wide       |\n",
+    "| 3    | Local / State level | Country wide       |\n",
     "| 4    | Election              | Covid              |\n",
     "\n",
-    "We can note than axis 0, 1 and 2 are identic as with the Townsquare media group. Axis 3 is quite similar but less focused on a specific state."
+    "We can note than axes 0, 1 and 2 are identical to the previous ones.\n",
+    "Axis 3 is quite similar also, but if you delve into the details of the words[^1] you can see they are less related to specific states (e.g. words \"Wyoming\" or \"Montana\"), but rather to states in general.\n",
+    "\n",
+    "The projections are now clearer (especially projection **TODO** *x* and *y*), and that for 2 reasons mainly:\n",
+    " 1. The withdrawal of articles from townsquare media, which had a high variance among several axes. It removed their influence, and hence the SVD projection could take into account the other media more.\n",
+    " 2. The removal of some points makes it easier to see the rest of them.\n",
+    "\n",
+    "[^1]: see notebook \"Analysis.ipynb\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c4fa19f",
+   "cell_type": "markdown",
+   "id": "8870309a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "From all these projections we can **todo: synonym of exhibit/identify** basically 3 types of media:\n",
+    "\n",
+    "1. Media belonging to some groups e.g. **TODO** *w* are clustered together on axes *x* and *y*, and are therefore easily identifiable. \n",
+    "\n",
+    "2. There are also media belonging to a group which we can't as easily uniquely identify, for example because they are part of a bicolor cluster (**TODO: e.g. bla and blou on graphs *x'* and *y'***. Still, we can exhibit a trend on these few groups.\n",
+    "\n",
+    "3. And finally, there are a number of groups which we have not managed to visually separate through these 2D-projections --see groups whose media are always in the middle of some big blob, e.g. *a*, or seem split all over, e.g. *b*)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "236c4d15",
+   "cell_type": "markdown",
+   "id": "e34dade1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The fact that a process as simple (**TODO: astérisque où on explique en quoi il est simple dans la suite**) as ours is able to exhibit media of groups 1 and 2 mean that these media have obvious bias (**TODO: make sure they are not together bc they are niche?**) which is correlated to the group to which they belong. This bias may be speaker-wise, where some people are **TODO: \"mis en avant\"** more than they should, or word-wise, where **TODO: x**.  \n",
+    "\n",
+    "In any case, if an unaware viewer gets their information from media in this group, whether one or several, they are bound to be biased too."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ac54a44",
+   "cell_type": "markdown",
+   "id": "c1fb93d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**TODO: the astérisque**  \n",
+    "We deem our process as simple because:\n",
+    " * It uses very little information, namely only\n",
+    "     * the names of the people quoted in articles of the media\n",
+    "     * or the words used in all quotes in articles of a media. **Not even in order**  \n",
+    "   \n",
+    "   which furthermore are is accessible, you can get it either by yourself, or using some preexisting dataset such as the one we used: *Quotebank. \n",
+    " * The algorithms on which it relies are conceptually relatively simple:\n",
+    "     * the TF-IDF transformation\n",
+    "     * the "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "021ad790",
+   "cell_type": "markdown",
+   "id": "b109b51a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**TODO: un commentaire (plus haut/avant) sur le fait que à la fois les \"speakers\" et les \"words in quotes\" sont parlants**"
+   ]
   },
   {
    "cell_type": "code",
@@ -606,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad107195",
+   "id": "1d37e5f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -614,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53c062a6",
+   "id": "82f0ee3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -622,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b5ec7fd",
+   "id": "6a23debb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -630,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa7ca591",
+   "id": "ea09270b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -700,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
