--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -10,6 +10,8 @@
     "When one wants to get information \n",
     "## 1. Blabla intro du sujet TODO\n",
     "\n",
+    "**idée: \"you reader, try and find your favourite US-journal(s)/media(s) in our cluster\"**\n",
+    "\n",
     "## 2. What is our goal?\n",
     "\n",
     "## 3. How do we achieve it (in short)?\n",
@@ -24,7 +26,7 @@
     "### 6.2 What's next/would be interesting to do\n",
     "\n",
     "### somewhere:\n",
-    "Indicate that we alternatively the terms speaker/citee/quotee, journal/media/newspaper, and group/consortium"
+    "Indicate that we interchangeably use the terms speaker/citee/quotee, journal/media/newspaper, and group/consortium"
    ]
   },
   {
@@ -104,7 +106,7 @@
    "source": [
     "# Ici quelques extraits de la data de quotebank avec juste les attributs qu'on a gardés\n",
     "\n",
-    "# Ou ptetre ?:\n",
+    "# Ou ptetre ?:git \n",
     " # 1: original\n",
     " # 2: ce qu'on a gardé"
    ]
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "288ef0bd",
+   "id": "f545cd85",
    "metadata": {},
    "source": [
     "We also add the country of the media (**TODO: how do you define the country of a media? the country of their website when we find one, and o.w. the one indicated on wikidata? or we just say \"country of origin\"?**), because we expect to see differences in media based on their country of origin."
@@ -230,6 +232,7 @@
     "Now that we have processed our data, we need to visualize it.  \n",
     "The problem is that the data (our TF-IDF matrices) is inherently high-dimensional, so we as humans can't directly visualize it. That is why we transform our matrices using [Singular Value Decomposition](https://en.wikipedia.org/wiki/Singular_value_decomposition) (SVD).\n",
     "\n",
+    "**TODO: cette explication suffit/est correcte?**\n",
     "This transformation should allow us to extract \"[topics](https://en.wikipedia.org/wiki/Topic_model)\", which correspond to the (orthonormal) directions of highest variation and their importance. We can then view the differences between different media along one such topic."
    ]
   },
@@ -347,7 +350,11 @@
    "id": "51d27244",
    "metadata": {},
    "source": [
-    "**TODO:** semi-conclusion on the efficiency of this technique."
+    "**TODO: la semi-conclusion on the efficiency of this technique:**\n",
+    "\n",
+    "So we are able to recognize which group some journals belong by only using the speakers quoted as a feature.\n",
+    "\n",
+    "Nevertheless, the most obvious separations seem to stem from georgaphical differences. We wonder whether through the use of words used in quotes we can cluster the media more efficiently."
    ]
   },
   {
@@ -502,7 +509,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8870309a",
+   "id": "67c96089",
+   "metadata": {},
+   "source": [
+    "**TODO: un mot sur les différences d'efficacité entre speaker-clustering et word-clustering? accompagné pk pas de 2 graphiques pour les opposer.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6103e99e",
    "metadata": {},
    "source": [
     "From all these projections we can **todo: synonym of exhibit/identify** basically 3 types of media:\n",
@@ -516,37 +531,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e34dade1",
+   "id": "6b99b0b3",
    "metadata": {},
    "source": [
-    "The fact that a process as simple (**TODO: astérisque où on explique en quoi il est simple dans la suite**) as ours is able to exhibit media of groups 1 and 2 mean that these media have obvious bias (**TODO: make sure they are not together bc they are niche?**) which is correlated to the group to which they belong. This bias may be speaker-wise, where some people are **TODO: \"mis en avant\"** more than they should, or word-wise, where **TODO: x**.  \n",
+    "The fact that a process as simple (**TODO: une astérisque/footnote où on explique en quoi il est simple dans la suite, ou on écrit simplement l'explication plus bas?**) as ours is able to exhibit media of groups 1 and 2 mean that these media have obvious bias (**TODO: make sure they are not together bc they are niche?**) which is correlated to the group to which they belong. This bias may be speaker-wise, where some people are **TODO: \"mis en avant\"** more than they should, or word-wise, where **TODO: x**.  \n",
     "\n",
     "In any case, if an unaware viewer gets their information from media in this group, whether one or several, they are bound to be biased too."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c1fb93d9",
+   "id": "fd0982bc",
    "metadata": {},
    "source": [
     "**TODO: the astérisque**  \n",
     "We deem our process as simple because:\n",
     " * It uses very little information, namely only\n",
     "     * the names of the people quoted in articles of the media\n",
-    "     * or the words used in all quotes in articles of a media. **Not even in order**  \n",
-    "   \n",
-    "   which furthermore are is accessible, you can get it either by yourself, or using some preexisting dataset such as the one we used: *Quotebank. \n",
-    " * The algorithms on which it relies are conceptually relatively simple:\n",
-    "     * the TF-IDF transformation\n",
-    "     * the "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b109b51a",
-   "metadata": {},
-   "source": [
-    "**TODO: un commentaire (plus haut/avant) sur le fait que à la fois les \"speakers\" et les \"words in quotes\" sont parlants**"
+    "     * or the words used in all quotes in articles of a media, seen as a **non-ordered** set.\n",
+    "\n",
+    "   which furthermore is esaily accessible; you can get it either by yourself, or using some preexisting dataset such as the one we used: *Quotebank*. \n",
+    " * The algorithms on which it relies are conceptually relatively simple, which we described earlier:\n",
+    "     * the TF-IDF transformation, which we explained earlier\n",
+    "     * the Singular Value Decomposition."
    ]
   },
   {
@@ -558,20 +565,27 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c66c188",
+   "cell_type": "markdown",
+   "id": "68431fd4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 6. Caveats and outlook\n",
+    "\n",
+    "### 6.1 Caveats \n",
+    "**TODO: mieux: là ça tombe un peu comme un cheveu sur la soupe**  \n",
+    "While our analysis made some biases clear, it is deeply linked to the dataset we used --here, *Quotebank*. That is why it is important to know how how the latter was generated. We advise one uses **TODO: \"some peer-reviewed database\"**. As the saying goes: *garbage in, garbage out*."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e344d85b",
+   "cell_type": "markdown",
+   "id": "fed80d8b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 6.2 Outlook (and what's next)\n",
+    "\n",
+    " * better projections/visualization ->**TODO: expliquer comment?**.\n",
+    " * more semantic analysis for quotes (better than simple bag/set of words)"
+   ]
   },
   {
    "cell_type": "code",
