reste à relire, et raffiner en revenant vers les 'TODO'

--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6a9acd49",
+   "metadata": {},
+   "source": [
+    "# Title: The dictatorship of consortia on the media they own."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f2a0032c",
    "metadata": {},
    "source": [
@@ -35,7 +43,27 @@
    "metadata": {},
    "source": [
     "# 1. Intro du sujet:\n",
-    "**TODO. see REDADME for a draft**"
+    "**TODO**\n",
+    "\n",
+    "One's view of the world is based on the information we have on it, and how it is conveyed. A big part of that information we obtain from the media, and in particular \"traditional media\" namely newspapers such as The Guardian or Fox News. As a result, these media have a huge impact on the public’s opinion.\n",
+    "\n",
+    "One way to ensure you are well-informed (i.e. you are getting information on various topics) and are\n",
+    "not biased towards a particular stance[^1] is to gather knowledge from several sources,\n",
+    "e.g. several media.\n",
+    "\n",
+    "[^1]: https://www.allsides.com/media-bias/media-bias-ratings\n",
+    "\n",
+    "But a lot of these media are owned by the same groups. This begs the question whether\n",
+    "the information we are getting really is diverse, or if the news and opinions shared\n",
+    "are roughly the same for media belonging to the same entity.[^2]\n",
+    "\n",
+    "[^2]: https://www.youtube.com/watch?v=_fHfgU8oMSo\n",
+    "\n",
+    "To answer that question, we will try to cluster journals according to different metrics and features in order to evaluate the opinions they defend. Other scientists have already obtained\n",
+    "similar results[^3] [^4] based on twitter which makes us also expect to get interesting results.\n",
+    "\n",
+    "[^3]: https://www.mediaobservatory.com/\n",
+    "[^4]: https://newsteller.io/source"
    ]
   },
   {
@@ -43,8 +71,9 @@
    "id": "1699fef9",
    "metadata": {},
    "source": [
-    "# 2. Our goal:\n",
-    "We aim to show that we can recognize which media group a journal belongs to, using some automatic clustering algorithm using very little data. As a result, we will have shown a lack of diversity of these journals, thus showing that if you want to be well-informed, simply reading different newspapers is not enough. One needs to pay attention to more than that."
+    "# 2. Our goal(s):\n",
+    "We aim to show that we can recognize which group some media belong to, using very little data.  \n",
+    "As a result, we will have shown a lack of diversity of these media, thus showing that if you want to be well-informed, simply reading different newspapers is not enough. One needs to pay attention to more than that."
    ]
   },
   {
@@ -53,20 +82,20 @@
    "metadata": {},
    "source": [
     "# 3. How we achieve that[^1]:\n",
-    "[^1]: For a detailed description of the process, keep reading, or better, go see our [notebook](https://github.com/epfl-ada/ada-2021-project-mahj)\n",
+    "[^1]: For a detailed step-by-step description of the process, plase refer to [our notebook](https://github.com/epfl-ada/ada-2021-project-mahj)\n",
     "\n",
     "### 3.1: Overview of the process\n",
     "\n",
-    "We need some *features* which allow us to distinguish between diferent media. To do so we use the [Quotebank](https://dlab.epfl.ch/people/west/pub/Vaucher-Spitz-Catasta-West_WSDM-21.pdf) database, which is a dataset of  speaker-attributed quotations that were extracted from diverse English news articles[^1].\n",
+    "We need some *features* which allow us to distinguish between diferent media. To do so we use the [Quotebank](https://dlab.epfl.ch/people/west/pub/Vaucher-Spitz-Catasta-West_WSDM-21.pdf) database, which is a dataset of  speaker-attributed quotations that were extracted from diverse English news articles[^2].\n",
     "\n",
-    "[^1]: https://zenodo.org/record/4277311\n",
+    "[^2]: https://zenodo.org/record/4277311\n",
     "\n",
     "We then augment this dataset using [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) to get the features we deemed necessary for our analysis.\n",
     "\n",
     "**TODO?: refine this paragraph**\n",
     "Finally after getting all those features, we use [Natural language processing](https://en.wikipedia.org/wiki/Natural_language_processing)-techniques (or NLP) to analyze our data, and understand the obtained results.  \n",
     "\n",
-    "### 3.2: Explanation of some of our choices (**TODO: and limitations/challenges?**)\n",
+    "### 3.2: Explanation of some of our choices and challenges\n",
     "We have chosen to only focus on one year (namely 2020), as we expect the topics of interest, as well as the prominent people to vary from one year to another.\n",
     "\n",
     "We expect basically all the media to talk about coronavirus, so we need to make sure it does not act as a \"*great equalizer*\" that overshadows other differences between media.\n",
@@ -84,7 +113,7 @@
     "**TODO: est-ce qu'on veut tenter du test-training? parce que jusqu'ici on ne fait que du training, et je me demande s'ils vont vouloir pénaliser ça.**  \n",
     "**TODO: par ex train sur les $x$ premiers mois, puis test sur les $12-x$ derniers mois, comme ça on justifie l'utilité: en s'entraînant avec la data du début de l'année on a des résultats pour la fin de l'année.**. Pb avec ça: yearly events\n",
     "\n",
-    "**TODO sur les graphes préciser que l'axe indiqué en premier correspond aux abscisses."
+    "**TODO: sur les graphes préciser que l'axe indiqué en premier correspond aux abscisses.**"
    ]
   },
   {
@@ -93,7 +122,8 @@
    "metadata": {},
    "source": [
     "### 4.1: data-augmentation[^1]\n",
-    "[^1]: see file Wikidata_scraping.ipynb for more details  \n",
+    "[^1]: refer to file Wikidata_scraping.ipynb for more details  \n",
+    "\n",
     "The data we extract from the Quotebank-dataset look like this:"
    ]
   },
@@ -118,7 +148,7 @@
    "source": [
     "As you can see, the owners of the media are not indicated here, so we need to extend our dataset with these features.  \n",
     "If we can't automatically find a journal's parent group, we decide to throw it away.\n",
-    "We also do so if the journals are lonely children. Indeed, we seek (**todo: above all/firstly**) to cluster them according to their parent groups, so isolated media are irrelevant."
+    "We also do so if the journals are lonely children. Indeed, we seek first and foremost to cluster them according to their parent groups, so isolated media are irrelevant."
    ]
   },
   {
@@ -183,21 +213,15 @@
    "id": "21e75c69",
    "metadata": {},
    "source": [
-    "For both these features, we will first use the [Term Frequency-Inverse Document Frequency](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) method (TF-IDF for short) (**todo: better name?**) before proceeding to further analysis.  \n",
+    "For both these features, we will first use the [Term Frequency-Inverse Document Frequency](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) method (TF-IDF for short) before proceeding to further analysis.  \n",
     "In a nutshell, this method allows one to measure the importance of a term[^1] to a document[^2] in a collection[^3] based on its number of apparitions.\n",
     "\n",
     "[^1]: Here a citee, or a word\n",
     "[^2]: Here a media\n",
-    "[^3]: Here, all the media we have kept"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b310d3b6",
-   "metadata": {},
-   "source": [
+    "[^3]: Here, all the media we have kept\n",
+    "\n",
     "**TODO: maybe a bit long?**  \n",
-    "Basically this method gives to each word a weight:\n",
+    "More clearly, this method gives to each word a weight:\n",
     " * *proportional* to its number of occurences in d (term frequency)\n",
     " * and *inversely proportional* to its presence in the corpus (inverse document frequency)[^1]\n",
     "[^1]: to quantify the 'presence' of a word in the corpus, we simply count the number of documents in which it occurs. We don't take its occurences per document into account here\n",
@@ -342,7 +366,7 @@
    "metadata": {},
    "source": [
     "Clearly we can spot some clusters when projecting on the first few axes. The purple and yellow ones are especially well separated. \n",
-    "**TODO: j'ai des pb pour run avec le .csv, donc je peux notamment pas voir à quel groupe ou quel topic ça correspond**"
+    "**TODO: noms des groupes**"
    ]
   },
   {
@@ -509,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c96089",
+   "id": "bb3283d0",
    "metadata": {},
    "source": [
     "**TODO: un mot sur les différences d'efficacité entre speaker-clustering et word-clustering? accompagné pk pas de 2 graphiques pour les opposer.**"
@@ -566,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68431fd4",
+   "id": "10e4e7b4",
    "metadata": {},
    "source": [
     "# 6. Caveats and outlook\n",
@@ -578,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed80d8b",
+   "id": "25873b45",
    "metadata": {},
    "source": [
     "### 6.2 Outlook (and what's next)\n",
