reste à relire, et raffiner en revenant vers les 'TODO'

--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6a9acd49",
+   "id": "e4ccfdfd",
    "metadata": {},
    "source": [
     "# Title: The dictatorship of consortia on the media they own."
@@ -374,7 +374,7 @@
    "id": "51d27244",
    "metadata": {},
    "source": [
-    "**TODO: la semi-conclusion on the efficiency of this technique:**\n",
+    "**TODO: la semi-conclusion on the efficiency of this technique, moment important du notebook:**\n",
     "\n",
     "So we are able to recognize which group some journals belong by only using the speakers quoted as a feature.\n",
     "\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3283d0",
+   "id": "6b7e6b43",
    "metadata": {},
    "source": [
     "**TODO: un mot sur les différences d'efficacité entre speaker-clustering et word-clustering? accompagné pk pas de 2 graphiques pour les opposer.**"
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e4e7b4",
+   "id": "6512d673",
    "metadata": {},
    "source": [
     "# 6. Caveats and outlook\n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25873b45",
+   "id": "d5b04960",
    "metadata": {},
    "source": [
     "### 6.2 Outlook (and what's next)\n",
