add todo in website

--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4ccfdfd",
+   "id": "022e0d69",
    "metadata": {},
    "source": [
     "# Title: The dictatorship of consortia on the media they own."
@@ -26,6 +26,7 @@
     "~Use Quotebank + Unsupervised learning\n",
     "\n",
     "## 4. Data story\n",
+    "**TODO: voir à quel moment mentionner le bokeh plot**\n",
     "\n",
     "## 5. Caveats (ou inverser 5. et 6. idk)\n",
     "\n",
@@ -533,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b7e6b43",
+   "id": "9e6d0cfc",
    "metadata": {},
    "source": [
     "**TODO: un mot sur les différences d'efficacité entre speaker-clustering et word-clustering? accompagné pk pas de 2 graphiques pour les opposer.**"
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6512d673",
+   "id": "2ebfaab3",
    "metadata": {},
    "source": [
     "# 6. Caveats and outlook\n",
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b04960",
+   "id": "064af820",
    "metadata": {},
    "source": [
     "### 6.2 Outlook (and what's next)\n",
