--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "022e0d69",
+   "id": "fc72dee9",
    "metadata": {},
    "source": [
     "# Title: The dictatorship of consortia on the media they own."
@@ -101,8 +101,7 @@
     "\n",
     "We expect basically all the media to talk about coronavirus, so we need to make sure it does not act as a \"*great equalizer*\" that overshadows other differences between media.\n",
     "\n",
-    "\n",
-    "**TODO: commenter la taille  É N O R M E  du dataset qu'on a?**  "
+    "As the data is so big, it cannot be held in the RAM all at once. Therefore we had to implement some pipelines treating the data chunk by chunk."
    ]
   },
   {
@@ -111,9 +110,6 @@
    "metadata": {},
    "source": [
     "# 4. But more precisely, what did you do?:\n",
-    "**TODO: est-ce qu'on veut tenter du test-training? parce que jusqu'ici on ne fait que du training, et je me demande s'ils vont vouloir pénaliser ça.**  \n",
-    "**TODO: par ex train sur les $x$ premiers mois, puis test sur les $12-x$ derniers mois, comme ça on justifie l'utilité: en s'entraînant avec la data du début de l'année on a des résultats pour la fin de l'année.**. Pb avec ça: yearly events\n",
-    "\n",
     "**TODO: sur les graphes préciser que l'axe indiqué en premier correspond aux abscisses.**"
    ]
   },
@@ -154,12 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "e02032bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Excerpt of wikidata code for scraping?\n",
     "# Exemple de à quoi ressemble les infos obtenues / la nouvelle data"
    ]
   },
@@ -168,7 +163,7 @@
    "id": "f545cd85",
    "metadata": {},
    "source": [
-    "We also add the country of the media (**TODO: how do you define the country of a media? the country of their website when we find one, and o.w. the one indicated on wikidata? or we just say \"country of origin\"?**), because we expect to see differences in media based on their country of origin."
+    "We also add the country of origin of the media, because we expect to see differences in media based on their country of origin."
    ]
   },
   {
@@ -257,8 +252,7 @@
     "Now that we have processed our data, we need to visualize it.  \n",
     "The problem is that the data (our TF-IDF matrices) is inherently high-dimensional, so we as humans can't directly visualize it. That is why we transform our matrices using [Singular Value Decomposition](https://en.wikipedia.org/wiki/Singular_value_decomposition) (SVD).\n",
     "\n",
-    "**TODO: cette explication suffit/est correcte?**\n",
-    "This transformation should allow us to extract \"[topics](https://en.wikipedia.org/wiki/Topic_model)\", which correspond to the (orthonormal) directions of highest variation and their importance. We can then view the differences between different media along one such topic."
+    "This transformation should allow us to extract \"[topics](https://en.wikipedia.org/wiki/Topic_model)\", which correspond to the directions of highest variation, i.e. **the ones separating the media the best**, and their importance. We can then view the differences between different media along one such axis."
    ]
   },
   {
@@ -312,7 +306,7 @@
     "It makes sense: UK-media will cite more UK-speakers, while USA-media will cite more USA-speakers. \n",
     "\n",
     "So our clustering works (for example it is easy to recognize journals from the media group *News Corp Australia*), but it is not enough yet. \n",
-    "Indeed, even if one is aware they should get their information from different media, are they really that likely to get it from different countries' media? Of course not, and that might be especially true for American people (**TODO: is there some study that says american are self centered? or at least we can find some about the nb of languages they know.**). \n",
+    "Indeed, even if one is aware they should get their information from different media, are they really that likely to get it from different countries' media? Of course not, and that might be especially true for American people (**TODO: is there some study that says american are self centered, i.e. they get their info from american newspapers?**). \n",
     "\n"
    ]
   },
@@ -346,6 +340,7 @@
     "| 0    | Frequent speakers               | Non Frequent speakers                          |\n",
     "| 1    | Sport coaches of Los Angeles    | West coast personalities                       |\n",
     "| 2    | Sport coaches of San Francisco  | Sport coaches/DJ of Los Angeles                |\n",
+    "| 3    | Nashville country singer        | Democrate political figure of Illinois/Minnesota |\n",
     "\n",
     "We also see (in bright green) that journals from *Townsquare Media* explain most of the variance of several axes, namely the 3rd and the 4th.  \n",
     "Hence although we can visually recognize media from this group, it might be interesting to redo our analysis while removing media from this group."
@@ -371,6 +366,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07fe5820",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d3e632a",
+   "metadata": {},
+   "source": [
+    "**TODO: without townsquare**"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "51d27244",
    "metadata": {},
@@ -379,7 +390,7 @@
     "\n",
     "So we are able to recognize which group some journals belong by only using the speakers quoted as a feature.\n",
     "\n",
-    "Nevertheless, the most obvious separations seem to stem from georgaphical differences. We wonder whether through the use of words used in quotes we can cluster the media more efficiently."
+    "Nevertheless, the most obvious separations seem to stem from geographical differences. We wonder whether through the use of words used in quotes we can cluster the media more efficiently. **todo: ~speakers are local, while words used are more subject-centered**"
    ]
   },
   {
@@ -412,8 +423,6 @@
    "id": "fdb61e98",
    "metadata": {},
    "source": [
-    "#### TODO: why is it called \"US health\" and not just \"health\" in the notebook \"Analysis\"?\n",
-    "\n",
     "Again, using the top words per axe we can identify the topics corresponding to the axes:\n",
     "\n",
     "| Axis | Max            | Min                   |\n",
@@ -476,7 +485,7 @@
    "metadata": {},
    "source": [
     "Visually, the bright green points really stand out.  \n",
-    "Can you guess to which journal they correspond?\n",
+    "Can you guess to which group they correspond?\n",
     "\n",
     "<details>\n",
     "  <summary>Click to reveal</summary>\n",
@@ -534,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6d0cfc",
+   "id": "26dd1c58",
    "metadata": {},
    "source": [
     "**TODO: un mot sur les différences d'efficacité entre speaker-clustering et word-clustering? accompagné pk pas de 2 graphiques pour les opposer.**"
@@ -591,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ebfaab3",
+   "id": "0f385ed2",
    "metadata": {},
    "source": [
     "# 6. Caveats and outlook\n",
@@ -603,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "064af820",
+   "id": "caa6e0e9",
    "metadata": {},
    "source": [
     "### 6.2 Outlook (and what's next)\n",
