change story todos

--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -93,8 +93,7 @@
     "\n",
     "We then augment this dataset using [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) to get the features we deemed necessary for our analysis.\n",
     "\n",
-    "**TODO?: refine this paragraph**\n",
-    "Finally after getting all those features, we use [Natural language processing](https://en.wikipedia.org/wiki/Natural_language_processing)-techniques (or NLP) to analyze our data, and understand the obtained results.  \n",
+    " \n",
     "\n",
     "### 3.2: Explanation of some of our choices and challenges\n",
     "We have chosen to only focus on one year (namely 2020), as we expect the topics of interest, as well as the prominent people to vary from one year to another.\n",
@@ -176,8 +175,7 @@
     " * First, cluster according to which speakers are cited in it.\n",
     " * Second, cluster according to the text content of the extracted quotes.\n",
     " \n",
-    "[^1]: see file \"Process_data.ipynb\" for more details  \n",
-    "**TODO: do we speak about the distance metrics?**"
+    "[^1]: see file \"Process_data.ipynb\" for more details  \n"
    ]
   },
   {
@@ -216,7 +214,6 @@
     "[^2]: Here a media\n",
     "[^3]: Here, all the media we have kept\n",
     "\n",
-    "**TODO: maybe a bit long?**  \n",
     "More clearly, this method gives to each word a weight:\n",
     " * *proportional* to its number of occurences in d (term frequency)\n",
     " * and *inversely proportional* to its presence in the corpus (inverse document frequency)[^1]\n",
@@ -247,7 +244,6 @@
    "metadata": {},
    "source": [
     "### 4.3: Data analysis (the heart of our problem)\n",
-    "**TODO: see file \"Analysis.ipynb\" for more details**\n",
     "\n",
     "Now that we have processed our data, we need to visualize it.  \n",
     "The problem is that the data (our TF-IDF matrices) is inherently high-dimensional, so we as humans can't directly visualize it. That is why we transform our matrices using [Singular Value Decomposition](https://en.wikipedia.org/wiki/Singular_value_decomposition) (SVD).\n",
