--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "# For 1, do a small graph like:\n",
-    "# journal i:\n",
+    "# article i:\n",
     "  # speaker 1\n",
     "  # speaker 2\n",
     "  # ...\n",
